fixing spacing

--- a/styles/Title.module.css
+++ b/styles/Title.module.css
@@ -17,14 +17,27 @@
     padding: .5rem;
 }
 
-
+.mainInfo {
+    padding-top: 35%;
+}
 .mainInfo h1 {
     margin: 0 1rem 1rem 1rem;
 }
+.mainInfo h3 {
+    margin: 0 0 0 1rem;
+}
 
 .interaction {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+
+    margin-top: 55%;
+}
+.interaction > button {
     border: red;
-    background-color: rgb(255, 0, 0, 0.2);
+    background-color: rgba(0, 0, 255, 0.2);
     border-style: solid;
     border-width: 1px;
     border-radius: 5px;
