--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
 }
 
 * {
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
 }
 
 body {
